raw-manifests/local-staging/k8sdashboard/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: k8s-dashboard-vs
  namespace: istio-system
spec:
  hosts:
    - "dashboard.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: k8sdashboard-staging-kong-proxy.kubernetes-dashboard.svc.cluster.local
            port:
              number: 80
